mistakes in web-template

--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "sample",
-  "version": "0.0.0",
+  "name": "screem",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
-    "start": "node www/bin",
+    "start": "node bin/www",
     "dev": "gulp run --gulpfile ./gulpfile.js",
     "watch": "gulp --gulpfile ./gulpfile.js watcher",
     "build": "gulp --gulpfile ./gulpfile.js dev"
